test/compile_errors/stage1/obj/empty_while_loop_body.zig
export fn a() void {
    while(true);
}

// empty while loop body
//
// tmp.zig:2:16: error: expected block or assignment, found ';'
